# PDF-to-Google-Sheets-Pipeline

./: .gitignore  README.md  create_db.sql  pyproject.toml  start_watcher_hidden.vbs  stop_watcher.bat
knowledge/: user_preference.txt
output/: Bank_Statement_Test (1).json  Bank_Statement_Test (1).xlsx  Bank_Statement_Test.json  Bank_Statement_Test.xlsx  CrewAI_Friendly_BPI_Statement.json  CrewAI_Friendly_BPI_Statement.xlsx
output/excel/: Bank_Statement_Test (1).xlsx
output/reports/: Bank_Statement_Test (1).json
src/pdf_to_google_sheets_data_entry_pipeline/: crew.py  folder_watcher.py  google_sheets_helper.py  main.py  sql_server_helper.py  web.py
src/pdf_to_google_sheets_data_entry_pipeline/config/: agents.yaml  tasks.yaml
src/pdf_to_google_sheets_data_entry_pipeline/tools/: custom_tool.py  pdf_table_extractor_tool.py
tests/: test_pdf_extractor.py
