[project]
name = "pdf_to_google_sheets_data_entry_pipeline"
version = "0.1.0"
description = "pdf_to_google_sheets_data_entry_pipeline using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[file-processing,google-genai,litellm,tools]==1.14.7",
    "Flask>=2.3.0",
    "gspread",
    "google-auth",
    "pandas",
    "openpyxl",
    "pyodbc",
]

[project.scripts]
pdf_to_google_sheets_data_entry_pipeline = "pdf_to_google_sheets_data_entry_pipeline.main:run"
run_crew = "pdf_to_google_sheets_data_entry_pipeline.main:run"
train = "pdf_to_google_sheets_data_entry_pipeline.main:train"
replay = "pdf_to_google_sheets_data_entry_pipeline.main:replay"
test = "pdf_to_google_sheets_data_entry_pipeline.main:test"
run_with_trigger = "pdf_to_google_sheets_data_entry_pipeline.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
override-dependencies = ["litellm<=1.82.6"]
